Fix menu on mobile

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -64,4 +64,25 @@
         }
     }
 }
+
+
+.headerHeight {
+    height: $headerHeight !important;
+}
+
+.mobileNavigator {
+    position: absolute;
+    top: $headerHeight;
+    left: 0;
+
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+
+    width: 100%;
+    background-color: $blue;  
+}
+.mobileNavigator a {
+    color: $white;
+}
   
